--- a/Tansilotren-Moldova/index.html
+++ b/Tansilotren-Moldova/index.html
@@ -201,7 +201,7 @@
                             (nu mai mult de 6 tab. pe zi) primele 1-2 zile până la ameliorare. </p>
 
                         <p><b>Terapia de întreținere: </b> 1 tab. de 3 ori pe zi până la însănătoșire.
-                            *Dacă după 8 zile de tratament nu survine videcarea completă sau apar noi simptome ale bolii, consultați un medic.</p>
+                            *Dacă după 8 zile de tratament nu survine vindecarea completă sau apar noi simptome ale bolii, consultați un medic.</p>
 
                         <p><b>În caz de amigdale hipertrofiate: </b> 1 tab. de 3 ori pe zi 6-8 săptămâni. </p>
 
@@ -236,7 +236,7 @@
 
                         <p><b>1-2 tab. de 3 ori pe zi până la însănătoșire.</b></p>
 
-                        <p><sup>*</sup>Dacă după 7 zile de tratament nu survine videcarea completă sau apar noi simptome ale bolii, consultați un medic.</p>
+                        <p><sup>*</sup>Dacă după 7 zile de tratament nu survine vindecarea completă sau apar noi simptome ale bolii, consultați un medic.</p>
 
                         <p><b>În caz de amigdale hipertrofiate:</b></p>
 
@@ -302,7 +302,7 @@
         <div class="block-5__plate">
             <div class="block-5__text">
                 <h4>Amigdalita cronică – <br><b>o sentintă?</b></h4>
-                <p>Practic fiecare persoana s-a confruntat cel puțin o dată în viață cu dureri în gât și amigdalită. Dar diagnosticul de <b>«Ämigdaliă recurentă»</b>  pe multe persoane îi îngrozește. Ce prezintă această maladie și cum să o tratezi?
+                <p>Practic fiecare persoana s-a confruntat cel puțin o dată în viață cu dureri în gât și amigdalită. Dar diagnosticul de <b>«Amigdaliă recurentă»</b>  pe multe persoane îi îngrozește. Ce prezintă această maladie și cum să o tratezi?
                 </p>
             </div>
             <div class="block-5__img"></div>
@@ -313,7 +313,7 @@
                 <div class="test-img-mobile"></div>
                 <div class="block-5__text">
                     <h4>Amigdalita cronică – <br><b>o sentintă?</b></h4>
-                    <p>Practic fiecare persoana s-a confruntat cel puțin o dată în viață cu dureri în gât și amigdalită. Dar diagnosticul de <b>«Ämigdaliă recurentă»</b>  pe multe persoane îi îngrozește. Ce prezintă această maladie și cum să o tratezi?
+                    <p>Practic fiecare persoana s-a confruntat cel puțin o dată în viață cu dureri în gât și amigdalită. Dar diagnosticul de <b>«Amigdaliă recurentă»</b>  pe multe persoane îi îngrozește. Ce prezintă această maladie și cum să o tratezi?
                     </p>
                 </div>
             </div>
@@ -327,7 +327,7 @@
                     Dacă persoana suportă două sau mai multe episoade repetate de amigdalită acută pe an, atunci vorbim deja de amigdalită recurentă (din latină Recurrens - „recurent, repetat”). Astfel, AMIGDALITA RECURENTĂ nu este altceva, decât o acutizarea AMIGDALITEI CRONICE existente. </p>
                 <p>Prezența amigdalitei cronice vorbește despre faptul că amigdalele nu pot face față funcției lor de protecție și nu reușesc să asigure funcționarea integrală a imunității locale și generale. </p>
 
-                <p><b>AMIGDALITELE FRECVENTE poat provoca complicații grave:</b></p>
+                <p><b>AMIGDALITELE FRECVENTE pot provoca complicații grave:</b></p>
 
                 <p>abces paratonsilar <br>
                     febră reumatismală acută <br>
@@ -339,7 +339,7 @@
                     
                 <p>Pentru tratamentul amigdalitei recurente se administrează diferite grupe de medicamente, îndreptate atât pentru înlăturarea infecției (antibiotice, antiseptice), cât și pentru restabilirea funcției de protecție a organismului (imunomodulatoare, vitamine, preparate naturale complexe). </p>
 
-                <p>Mai bine de 80 de ani, pentru tratamentul cu succes al amigdalitelor acute și recurente se foloseșțte preparatul natural complex german Tonsilotren (DHU, Germania).
+                <p>Mai bine de 80 de ani, pentru tratamentul cu succes al amigdalitelor acute și recurente se folosește preparatul natural complex german Tonsilotren (DHU, Germania).
 
                     TONSILOTREN este o combinație de cinci componente naturale active, care înlătură inflamația și stimulează mecanismele proprii de apărare ale organismului împotriva infecțiilor virale și bacteriene ale faringelui în diferite stadii ale inflamației și contribuie la micșorarea amigdalelor hipertrofiate. </p>
 
@@ -384,7 +384,7 @@
 
                     Pentru tratamentul copiilor sub vârsta de 3 ani, se recomandă dizolvarea comprimatului într-o cantitate mică de apă (de exemplu, într-o linguriță).
 
-                    Se oate administra în orice loc și timp. Rețineți, că intervalul între administrarea preparatului Tonsilotren și luarea mesei sau apei trebuie să fie minim 30 de min.
+                    Se poate administra în orice loc și timp. Rețineți, că intervalul între administrarea preparatului Tonsilotren și luarea mesei sau apei trebuie să fie minim 30 de min.
 
                     În caz de amigdalită Tonsilotren trebuie luat imediat ce au apărut primele simptome.
 
@@ -446,12 +446,12 @@
                 - înlăturarea procesului inflamator din amigdalele palatine; <br>
                 - îmbunătățirea funcției de drenaj a lacunelor amigdalelor palatine; <br>
                 - normalizarea imunității locale și generale. <br>
-                    <p>Pentru a îmbunătăți funcția de drenare a lacunelor amigdalelor palatine, se aplică aspirarea conținutului purulent, spalarea cu soluții antiseptice, masajul amigdalelor, aplicații cu diverse preparate pe suprafață. </p>
-                    <p>Pentru creșterea imunitatății locale și generale, se utilizează medicamente cu efect imunomodulator.
+                    <p>Pentru a îmbunătăți funcția de drenare a lacunelor amigdalelor palatine, se aplică aspirarea conținutului purulent, spălarea cu soluții antiseptice, masajul amigdalelor, aplicații cu diverse preparate pe suprafață. </p>
+                    <p>Pentru creșterea imunității locale și generale, se utilizează medicamente cu efect imunomodulator.
 
                         Terapia conservatoare se efectuiază în cure la fiecare 6 luni. În cazul ineficienței a 2-3 cure de tratament, medicii vor lua o decizie cu privire la tratamentul chirurgical (amigdalectomie)<sup>1</sup>.<br>
                         Peste 80 de ani pentru tratamentul de bază al amigdalitei, se utilizează preparatul natural Tonsilotren. <br>
-                        Tonsilotren posedă un efect antiinflamator sistemic, restabilește funcția de protecție a amigdalelor și imbunătățește indicatorii imunității generale.</p>
+                        Tonsilotren posedă un efect antiinflamator sistemic, restabilește funcția de protecție a amigdalelor și îmbunătățește indicatorii imunității generale.</p>
                 <p><b>Amigdalită? Tratează corect – TONSILOTREN </b></p>
                 <p>1 Дитячий лікар 6 (13) 2011, Хронічний тонзиліт у дітей: актуальні питання лікування та профілактики.</p>
                 </p>
@@ -508,14 +508,14 @@
                         • Rezultatul investigației la streptococul hemolitic în ziua 10-a a fost negativ <br>
                         • Tolerabilitatea a fost apreciată foarte bună în 100% din cazuri<sup>6</sup><br>
                     </p>
-                    <p>
+                    <!-- <p>
                         1. Мальцева Г. С., Гринчук О. Н. Консервативное лечение хронического тонзиллита стрептококковой этиологии // Оториноларингология : статья в журнале - научная статья. — Москва: Некоммерческое партнерство содействия развитию системы здравоохранения и медицины "Русмедикал групп", 2011. — № 6. — С. 20—23. <br>
                         2. Богомильский М.Р., Чистякова В.Р. Детская оториноларингология // Медицина. — Москва, 2015<br>
                         3. Вишняков В.В. Оториноларингология. Медицина. — Москва, 2014<br>
                         4. Пальчун В.Т. Руководство по практической оториноларингологии. Медицина. — Москва, 2011<br>
                         5 .Дитячий лікар 6 (13) 2011, Хронічний тонзиліт у дітей: актуальні питання лікування та профілактики.<br>
                         6. Лечение катаральной ангины с помощью гомеопатического препарата Тонзилотрен, Боковой А., Хегер М.,Щютцле Б.
-                    </p>
+                    </p> -->
                 </p>
             </div>
         </div>
@@ -525,7 +525,7 @@
             <div class="block-5__text">
                 <h4>Recomandări în
                     <br><b>amigdalite</b></h4>
-                <p>În caz de inflamație a faringelui, apar probleme cu vocea. Înlăturați inflamația și senzația de discomfort și durere în gât.
+                <p>În caz de inflamație a faringelui, apar probleme cu vocea. Înlăturați inflamația și senzația de disconfort și durere în gât.
 
                 </p>
             </div>
@@ -538,7 +538,7 @@
                 <div class="block-5__text">
                     <h4>Recomandări în<br>
                         <br><b>amigdalite</b></h4>
-                    <p>În caz de inflamație a faringelui, apar probleme cu vocea. Înlăturați inflamația și senzația de discomfort și durere în gât.
+                    <p>În caz de inflamație a faringelui, apar probleme cu vocea. Înlăturați inflamația și senzația de disconfort și durere în gât.
 
                         Evitați pe cât de posibil fumatul și consumul de alcool în faza inflamatorie acută. Aceastea  irită și afectează și mai mult membrana mucoasă.
 
@@ -557,7 +557,7 @@
                 <p>Prin urmare, majoritatea optează pentru ceaiul cald. De asemenea, o eșarfă caldă în jurul gâtului poate îmbunătăți starea. Expunerea la căldură îmbunătățește fluxul de sânge și accelerează procesul de vindecare.
 
                     Întrucât alimentarea este adesea împiedicată de iritare și inflamație în gât, alimentele moi sau lichide, cum ar fi terciul sau supa, sunt îndeosebi indicate pentru a furniza organismului nutrienți suficienți în timpul infecției. Bulionul de pui este deosebit de util. De asemenea, mierea ajută de obicei la amigdalită. Cu toate acestea, trebuie menționat faptul că aceasta nu trebuie dizolvată în ceaiul foarte cald.</p>
-                <p>Clătiturile cu decoct călduț de ierburi (calendula, mușețel, salvie) sunt eficiente. </p>
+                <p>Clătiturile cu decoct călduț de ierburi (gălbinele, mușețel, salvie) sunt eficiente. </p>
                     <p>Aveți grijă de sine și tratați corect amigdalita. Preparatul Tonsilotren este eficient și inofensiv în amigdalita acută și cronică. </p>
                 </p>
             </div>
