--- a/Tansilotren-Ukraine/index-ru.html
+++ b/Tansilotren-Ukraine/index-ru.html
@@ -171,12 +171,12 @@
                         <p><b>При увеличении небных миндалин: </b> 
                             по 1 таблетке 3 раза в сутки.</p>
 
-                            <p>Если после завершения 8 дней лечения не наблюдается улучшения, то следует проконсультироваться с врачом. </p>
+                            <p>Если после завершения 8 дней лечения не наблюдается улучшения, то следует проконсультироваться с врачом.  </p>
 
 
-                        <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в ротовой полости. </p>
+                        <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в ротовой полости.  </p>
 
-                        <p>Продолжительность курса лечения определяет врач индивидуально. </p>
+                        <p>Продолжительность курса лечения определяет врач индивидуально.  </p>
 
                     </div>
                 </div>
@@ -193,19 +193,19 @@
                     <div class="popup__message">
                         <p><b>Дети от 6 до 12 лет</b></p>
 
-                        <p><b>Острый период: </b> по 1 таблетке каждые 2 часа (до 6 таблеток в сутки) до улучшения.</p>
+                        <p><b>Острый период: </b> по 1 таблетке каждые 2 часа (до 6 таблеток в сутки) до улучшения состояния.</p>
 
-                        <p><b>При дальнейшем лечении или при хронических состояниях: </b> по 1 таблетке 3 раза в день до полного выздоровления.</p>
+                        <p><b>При дальнейшем лечении или при хронических состояниях: </b>  по 1 таблетке 3 раза в день до полного выздоровления.</p>
 
-                        <p><b>При увеличении небных миндалин: </b> по 1 таблетке 3 раза в день.</p>
+                        <p><b>При увеличении небных миндалин:  </b> по 1 таблетке 3 раза в день.</p>
 
-                        <p><b>При склонности к ангинам для профилактики повторных эпизодов: </b> по 1 табл. 3 раза в день, 6-8 недель несколько курсов в год.</p>
+                        <!-- <p><b>При склонности к ангинам для профилактики повторных эпизодов: </b> по 1 табл. 3 раза в день, 6-8 недель несколько курсов в год.</p> -->
 
                         <p>Если после завершения 8 дней лечения не наблюдается улучшения, то следует проконсультироваться с врачом. </p>
 
                         <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в ротовой полости. </p>
 
-                        <p>Продолжительность курса лечения определяет врач индивидуально. </p>
+                        <p>Продолжительность курса лечения определяет врач индивидуально.  </p>
 
                     </div>
                 </div>
@@ -222,16 +222,16 @@
                     <div class="popup__message">
                         <p><b>Дети старше 12 лет и взрослые </b></p>
 
-                        <p><b>Острый период: </b>по 1 таблетке каждый час (до 12 таблеток в сутки) до улучшения.
+                        <p><b>Острый период: </b>по 1 таблетке каждый час (до 12 таблеток в сутки) до улучшения состояния.
                         </p>
 
                         <p><b>При дальнейшем лечении или при хронических состояниях:</b>
 
-                        по 1-2 таблетке 3 раза в день до полного выздоровления.</p>
+                        по 1-2 таблетке 3 в сутки до полного выздоровления.</p>
 
                         
 
-                        <p><b>При увеличении небных миндалин: </b>по 1 таблетке 3 раза в день. </p>
+                        <p><b>При увеличении небных миндалин:  </b>по 1 таблетке 3 раза в день. </p>
 
                         <p>Если после завершения 8 дней лечения не наблюдается улучшения, то следует проконсультироваться с врачом. </p>
 
@@ -253,7 +253,7 @@
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети от 2 до 6 лет</h3>
-            <p><b>При острых состояниях или для поддерживающей терапии:</b><br>по 1 табл. 3 раза в день.</p>
+            <p><b>При острых состояниях и при дальнейшем лечении или при хронических состояниях: </b> по 1 таблетке 3 раза в сутки.</p>
             <!--            <div class="popup popup1">Детальнее</div>-->
             <button class="popup-btn popup1" data-action="open1">Детальнее</button>
         </div>
@@ -269,13 +269,14 @@
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети от 6 до 12 лет</h3>
-            <p><b>Острый период:</b><br>по 1 табл. каждые 2 часа (до 6 раз в день) первые 1-2 дня до улучшения.</p>
+            <p><b>Острый период: </b> по 1 таблетке каждые 2 часа (до 6 таблеток в сутки) до улучшения состояния.</p>
             <button class="popup-btn popup2" data-action="open2">Детальнее</button>
         </div>
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Дети старше 12 лет и взрослые</h3>
-            <p><b>Острый период:</b><br>по 1 табл.каждый час (до 12 раз в день) первые 1-2 дня до улучшения.</p>
+            <p><b>Острый период: </b>по 1 таблетке каждый час (до 12 таблеток в сутки) до улучшения состояния.
+                        </p>
             <button class="popup-btn popup3" data-action="open3">Детальнее</button>
         </div>
     </div>
@@ -405,7 +406,7 @@
 <!--        plate3-->
         <div class="block-5__plate">
             <div class="block-5__text">
-                <h4>Нужно ли удалять <br><b>миндалины?</b></h4>
+                <h4>МИНДАЛИНЫ УДАЛИТЬ НЕЛЬЗЯ ОСТАВИТЬ.<br> ГДЕ ПОСТАВИТЬ ЗАПЯТУЮ?</h4>
                 <p>Современные тенденции в лечении хронического тонзиллита у детей основываются на максимально <b>бережном отношении к миндалинам</b> как иммунокомпетентному органу (органу, отвечающему за иммунитет), удаление которых оправдано только в случаях доказанной функциональной непригодности и гипертрофии лимфоглоточного кольца Вальдеера - Пирогова.</p>
             </div>
             <div class="block-5__img"></div>
@@ -415,7 +416,7 @@
             <div class="mobile mob3">
                 <div class="test-img-mobile"></div>
                 <div class="block-5__text">
-                    <h4>Нужно ли удалять <br><b>миндалины?</b></h4>
+                    <h4>МИНДАЛИНЫ УДАЛИТЬ НЕЛЬЗЯ ОСТАВИТЬ.<br> ГДЕ ПОСТАВИТЬ ЗАПЯТУЮ?</h4>
                     <p>Современные тенденции в лечении хронического тонзиллита у детей основываются на максимально <b>бережном отношении к миндалинам</b> как иммунокомпетентному органу (органу, отвечающему за иммунитет), удаление которых оправдано только в случаях доказанной функциональной непригодности и гипертрофии лимфоглоточного кольца Вальдеера - Пирогова.</p>
                 </div>
             </div>
