--- a/Tansilotren-Moldova/index.html
+++ b/Tansilotren-Moldova/index.html
@@ -580,10 +580,10 @@
               </div>
             <h3>Baza de date </h3>
             <ol>
-                <li>Friese K.H., Zabalotnyi D.I. [Гомеопатическое лечение тонзиллита нестрептококковой этиологии у детей...]. Der Kassenarzt 2006; 6: 40-42.</li>
+                <li>Friese K.H., Zabalotnyi D.I. [Tratamentul homeopathic al amigdalitei de etiologie nonsteptococică la copii.]. Der Kassenarzt 2006; 6: 40-42.</li>
                 <li>Jürgen Palma et all. «Effectiveness of an add-on treatment with the homeopathic medication SilAtro-5-90 in recurrent tonsillitis: An international, pragmatic, randomized, controlled clinical trial» // Complementary Therapies in Clinical Practice Volume 28, August 2017, Pages 181-191.</li>
-                <li>Т.А. Крючко и соавт. «Результаты клинических исследований по применению Тонзилотрена у детей с хроническим тонзиллитом» // Дитячий лікар 5 (7) 2010, с. 54-58</li>
-                <li>По данным проекта «Rx test — Мониторинг назначений лекарственных средств» компании «Proxima Research» при основном диагнозе хронический тонзиллит в 2017 г.</li>
+                <li>Т.А. Крючко и соавт. «Rezultatele studiilor clinice privind administrarea Tonsilotrenului la copii cu amigdalită cronică.» // Дитячий лікар 5 (7) 2010, с. 54-58</li>
+                <li>Potrivit studiului “Rx test-monitorizarea administrării medicamentelor” “Proxima Research”cu diagnosticul al amigdalitei cornice în 2017.</li>
                 <li><a>https://www.clinicaltrialsregister.eu/ctr-search/search?query=tonsilotren</a></li>
             </ol>
         </div>
