--- a/Tansilotren-Moldova/index.html
+++ b/Tansilotren-Moldova/index.html
@@ -302,7 +302,7 @@
         <div class="block-5__plate">
             <div class="block-5__text">
                 <h4>Amigdalita cronică – <br><b>o sentintă?</b></h4>
-                <p>Practic fiecare persoana s-a confruntat cel puțin o dată în viață cu dureri în gât și amigdalită. Dar diagnosticul de <b>«Amigdaliă recurentă»</b>  pe multe persoane îi îngrozește. Ce prezintă această maladie și cum să o tratezi?
+                <p>Practic fiecare persoana s-a confruntat cel puțin o dată în viață cu dureri în gât și amigdalită. Dar diagnosticul de <b>«Amigdalită»</b>  pe multe persoane îi îngrozește. Ce prezintă această maladie și cum să o tratezi?
                 </p>
             </div>
             <div class="block-5__img"></div>
@@ -313,18 +313,14 @@
                 <div class="test-img-mobile"></div>
                 <div class="block-5__text">
                     <h4>Amigdalita cronică – <br><b>o sentintă?</b></h4>
-                    <p>Practic fiecare persoana s-a confruntat cel puțin o dată în viață cu dureri în gât și amigdalită. Dar diagnosticul de <b>«Amigdaliă recurentă»</b>  pe multe persoane îi îngrozește. Ce prezintă această maladie și cum să o tratezi?
+                    <p>Practic fiecare persoana s-a confruntat cel puțin o dată în viață cu dureri în gât și amigdalită. Dar diagnosticul de <b>«Amigdalită»</b>  pe multe persoane îi îngrozește. Ce prezintă această maladie și cum să o tratezi?
                     </p>
                 </div>
             </div>
             <button class="accordion popup-btn block-5__popup">Detalii</button>
 
             <div class="panel">
-                <p>AMIGDALITA este o inflamație acută sau cronică a amigdalelor palatine - formațiuni limfoide, situate pe peretele lateral al faringelui, asemănătoare migdalelor. Amigdalele sunt străpunse cu pante speciale - lacune. Lacunele sunt capcane pentru microbi și viruși, precum și un fel de „câmp de luptă” în care sistemul imunitar învață să lupte cu acești microbi și viruși. Anume amigdalele sunt primele care interacționează cu agenții patogeni din mediul extern și oferă protecție organismului nostru.
-
-                    AMIGDALITA ACUTĂ sau ANGINA este o maladie infecțioasă acută cu o afectarea predominantă a amigdalelor. În același timp, se afectează atât amigdalele, cât și întreg organismul. În cele mai multe cazuri, amigdalita acută este provocată de viruși, dar mai periculoase sunt bacteriile: streptococi sau stafilococi. Se manifestă prin durere de gât puternică, inflamație și creșterea în volum al amigdalelor palatine, febră înaltă. Este posibilă apariția depunerilor purulente. După suportarea amigdalitei, scade imunitatea și organismul cu greu rezistă la infecții.
-
-                    Dacă persoana suportă două sau mai multe episoade repetate de amigdalită acută pe an, atunci vorbim deja de amigdalită recurentă (din latină Recurrens - „recurent, repetat”). Astfel, AMIGDALITA RECURENTĂ nu este altceva, decât o acutizarea AMIGDALITEI CRONICE existente. </p>
+                <p>AMIGDALITA este o inflamație acută sau cronică a amigdalelor palatine - formațiuni limfoide, situate pe peretele lateral al faringelui, asemănătoare migdalelor. Amigdalele sunt străpunse cu pante speciale - lacune. Lacunele sunt capcane pentru microbi și viruși, precum și un fel de „câmp de luptă” în care sistemul imunitar învață să lupte cu acești microbi și viruși. Anume amigdalele sunt primele care interacționează cu agenții patogeni din mediul extern și oferă protecție organismului nostru. AMIGDALITA ACUTĂ sau ANGINA este o maladie infecțioasă acută cu afectarea predominantă a amigdalelor. În același timp, sunt afectate atât amigdalele, cât și întreg organismul. În cele mai multe cazuri, amigdalita acută este provocată de viruși, dar mai periculoase sunt bacteriile: streptococi sau stafilococi. Se manifestă prin durere puternică în gât, inflamație și creșterea în volum al amigdalelor palatine, febră înaltă. Este posibilă apariția depunerilor purulente. După suportarea amigdalitei, scade imunitatea și organismul cu greu rezistă la infecții. Dacă persoana suportă două sau mai multe episoade repetate de amigdalită acută pe an, atunci vorbim deja de amigdalită recurentă (din latină Recurrens - „recurent, repetat”). Astfel, AMIGDALITA RECURENTĂ nu este altceva, decât o acutizarea AMIGDALITEI CRONICE existente.</p>
                 <p>Prezența amigdalitei cronice vorbește despre faptul că amigdalele nu pot face față funcției lor de protecție și nu reușesc să asigure funcționarea integrală a imunității locale și generale. </p>
 
                 <p><b>AMIGDALITELE FRECVENTE pot provoca complicații grave:</b></p>
@@ -339,7 +335,7 @@
                     
                 <p>Pentru tratamentul amigdalitei recurente se administrează diferite grupe de medicamente, îndreptate atât pentru înlăturarea infecției (antibiotice, antiseptice), cât și pentru restabilirea funcției de protecție a organismului (imunomodulatoare, vitamine, preparate naturale complexe). </p>
 
-                <p>Mai bine de 80 de ani, pentru tratamentul cu succes al amigdalitelor acute și recurente se folosește preparatul natural complex german Tonsilotren (DHU, Germania).
+                <p>Mai bine de 80 de ani, pentru tratamentul cu succes al amigdalitelor acute și recurente se folosește produsul natural complex german Tonsilotren (DHU, Germania).
 
                     TONSILOTREN este o combinație de cinci componente naturale active, care înlătură inflamația și stimulează mecanismele proprii de apărare ale organismului împotriva infecțiilor virale și bacteriene ale faringelui în diferite stadii ale inflamației și contribuie la micșorarea amigdalelor hipertrofiate. </p>
 
@@ -360,11 +356,11 @@
                 <h4>Despre  <br><b>Tonsilotren</b></h4>
                 <p><b>Produs în Germania din 1935. </b>
 
-                    Nu este nevoie să înghițiți pilula, este bună la gust și se dizolvă ușor, se dizolvă în cavitatea bucală.
+                    Nu este nevoie să pastila, este bună la gust și, se dizolvă în cavitatea bucală.
 
                     Pentru tratamentul copiilor sub vârsta de 3 ani, se recomandă dizolvarea comprimatului într-o cantitate mică de apă (de exemplu, într-o linguriță).
 
-                    Se poate administra în orice loc și timp. Rețineți, că intervalul între administrarea preparatului Tonsilotren și luarea mesei sau apei trebuie să fie minim 30 de min.
+                    Se poate administra în orice loc și timp. Rețineți, că intervalul între administrarea produsului Tonsilotren și luarea mesei sau apei trebuie să fie minim 30 de min.
 
                     În caz de amigdalită Tonsilotren trebuie luat imediat ce au apărut primele simptome.
 
@@ -380,11 +376,11 @@
                 <h4>Despre  <br><b>Tonsilotren</b></h4>
                 <p><b>Produs în Germania din 1935. </b>
 
-                    Nu este nevoie să înghițiți pilula, este bună la gust și se dizolvă ușor, se dizolvă în cavitatea bucală.
+                    Nu este nevoie să pastila, este bună la gust și, se dizolvă în cavitatea bucală.
 
                     Pentru tratamentul copiilor sub vârsta de 3 ani, se recomandă dizolvarea comprimatului într-o cantitate mică de apă (de exemplu, într-o linguriță).
 
-                    Se poate administra în orice loc și timp. Rețineți, că intervalul între administrarea preparatului Tonsilotren și luarea mesei sau apei trebuie să fie minim 30 de min.
+                    Se poate administra în orice loc și timp. Rețineți, că intervalul între administrarea produsului Tonsilotren și luarea mesei sau apei trebuie să fie minim 30 de min.
 
                     În caz de amigdalită Tonsilotren trebuie luat imediat ce au apărut primele simptome.
 
@@ -450,7 +446,7 @@
                     <p>Pentru creșterea imunității locale și generale, se utilizează medicamente cu efect imunomodulator.
 
                         Terapia conservatoare se efectuiază în cure la fiecare 6 luni. În cazul ineficienței a 2-3 cure de tratament, medicii vor lua o decizie cu privire la tratamentul chirurgical (amigdalectomie)<sup>1</sup>.<br>
-                        Peste 80 de ani pentru tratamentul de bază al amigdalitei, se utilizează preparatul natural Tonsilotren. <br>
+                        Peste 80 de ani pentru tratamentul de bază al amigdalitei, se utilizează produsul natural Tonsilotren. <br>
                         Tonsilotren posedă un efect antiinflamator sistemic, restabilește funcția de protecție a amigdalelor și îmbunătățește indicatorii imunității generale.</p>
                 <p><b>Amigdalită? Tratează corect – TONSILOTREN </b></p>
                 <p>1 Дитячий лікар 6 (13) 2011, Хронічний тонзиліт у дітей: актуальні питання лікування та профілактики.</p>
@@ -495,7 +491,7 @@
                     Incidența amigdalitei cronice: <br>
                     Adulți: 5-6% până la 37% <br>
                     Copii: 15% până la 63% <sup>1-4</sup><br>
-                    Cea mai mare incidență este în grupa de vârstă de 16-20 de ani. În populația generală de copii, amigdalita cronică apare cu o frecvență de 15%, iar în grupul copiilor frecvent bolnavi - 43%, ceea ce confirmă rolul important al amigdalelor în formarea apărării imune a organismului copilului <sup>5</sup>.
+                    Cea mai mare incidență este în grupa de vârstă de 16-20 de ani. La copii, amigdalita cronică apare cu o frecvență de 15%, iar în grupul copiilor frecvent bolnavi - 43%, ceea ce confirmă rolul important al amigdalelor în formarea apărării imune a copilului <sup>5</sup>.
                     <p>
                 Tonsilotren posedă o excelentă tolerabilitate și inofensivitate, demonstrată în 21 de studii clinice, cu participarea peste 10.000 de pacienți, inclusiv peste 8.000 de copii.
 
@@ -505,7 +501,7 @@
                     <p>
                         • În ziua 4-a efectul terapeutic a apărut la 93,3% dintre pacienți <br>
                         • Dificultatea la înghițire a dispărut complet în ziua a 4-a la 56,7% dintre pacienți <br>
-                        • Rezultatul investigației la streptococul hemolitic în ziua 10-a a fost negativ <br>
+                        • Rezultatul testului la streptococul hemolitic în ziua 10-a a fost negativ <br>
                         • Tolerabilitatea a fost apreciată foarte bună în 100% din cazuri<sup>6</sup><br>
                     </p>
                     <!-- <p>
@@ -540,7 +536,7 @@
                         <br><b>amigdalite</b></h4>
                     <p>În caz de inflamație a faringelui, apar probleme cu vocea. Înlăturați inflamația și senzația de disconfort și durere în gât.
 
-                        Evitați pe cât de posibil fumatul și consumul de alcool în faza inflamatorie acută. Aceastea  irită și afectează și mai mult membrana mucoasă.
+                        Evitați pe cât de posibil fumatul și consumul de alcool în faza inflamatorie acută. Acestea  irită și afectează și mai mult membrana mucoasă.
 
                         Dacă suferiți de amigdalită, este important ca gâtul să fie suficient de hidratat. </p>
                 </div>
@@ -549,7 +545,7 @@
 
             <div class="panel">
                 <p>
-                    <p>Evitați pe cât de posibil fumatul și consumul de alcool în faza inflamatorie acută. Aceastea  irită și afectează și mai mult membrana mucoasă.
+                    <p>Evitați pe cât de posibil fumatul și consumul de alcool în faza inflamatorie acută. Acestea  irită și afectează și mai mult membrana mucoasă.
 
                 Dacă suferiți de amigdalită, este important ca gâtul să fie suficient de hidratat. </p>
                 <p>Opiniile diferă, ce este mai bine: băuturile reci sau calde?</p>
@@ -557,7 +553,7 @@
                 <p>Prin urmare, majoritatea optează pentru ceaiul cald. De asemenea, o eșarfă caldă în jurul gâtului poate îmbunătăți starea. Expunerea la căldură îmbunătățește fluxul de sânge și accelerează procesul de vindecare.
 
                     Întrucât alimentarea este adesea împiedicată de iritare și inflamație în gât, alimentele moi sau lichide, cum ar fi terciul sau supa, sunt îndeosebi indicate pentru a furniza organismului nutrienți suficienți în timpul infecției. Bulionul de pui este deosebit de util. De asemenea, mierea ajută de obicei la amigdalită. Cu toate acestea, trebuie menționat faptul că aceasta nu trebuie dizolvată în ceaiul foarte cald.</p>
-                <p>Clătiturile cu decoct călduț de ierburi (gălbinele, mușețel, salvie) sunt eficiente. </p>
+                <p>Clătiturile cu decoct călduț de ierburi (gălbenele, mușețel, salvie) sunt eficiente. </p>
                     <p>Aveți grijă de sine și tratați corect amigdalita. Preparatul Tonsilotren este eficient și inofensiv în amigdalita acută și cronică. </p>
                 </p>
             </div>
@@ -580,10 +576,10 @@
               </div>
             <h3>Baza de date </h3>
             <ol>
-                <li>Friese K.H., Zabalotnyi D.I. [Tratamentul homeopathic al amigdalitei de etiologie nonsteptococică la copii.]. Der Kassenarzt 2006; 6: 40-42.</li>
+                <li>Friese K.H., Zabalotnyi D.I. [Гомеопатическое лечение тонзиллита нестрептококковой этиологии у детей...]. Der Kassenarzt 2006; 6: 40-42.</li>
                 <li>Jürgen Palma et all. «Effectiveness of an add-on treatment with the homeopathic medication SilAtro-5-90 in recurrent tonsillitis: An international, pragmatic, randomized, controlled clinical trial» // Complementary Therapies in Clinical Practice Volume 28, August 2017, Pages 181-191.</li>
-                <li>Т.А. Крючко и соавт. «Rezultatele studiilor clinice privind administrarea Tonsilotrenului la copii cu amigdalită cronică.» // Дитячий лікар 5 (7) 2010, с. 54-58</li>
-                <li>Potrivit studiului “Rx test-monitorizarea administrării medicamentelor” “Proxima Research”cu diagnosticul al amigdalitei cornice în 2017.</li>
+                <li>Т.А. Крючко и соавт. «Результаты клинических исследований по применению Тонзилотрена у детей с хроническим тонзиллитом» // Дитячий лікар 5 (7) 2010, с. 54-58</li>
+                <li>По данным проекта «Rx test — Мониторинг назначений лекарственных средств» компании «Proxima Research» при основном диагнозе хронический тонзиллит в 2017 г.</li>
                 <li><a>https://www.clinicaltrialsregister.eu/ctr-search/search?query=tonsilotren</a></li>
             </ol>
         </div>
