--- a/Tansilotren-Moldova/index.html
+++ b/Tansilotren-Moldova/index.html
@@ -442,7 +442,7 @@
                 - înlăturarea procesului inflamator din amigdalele palatine; <br>
                 - îmbunătățirea funcției de drenaj a lacunelor amigdalelor palatine; <br>
                 - normalizarea imunității locale și generale. <br>
-                    <p>Pentru a îmbunătăți funcția de drenare a lacunelor amigdalelor palatine, se aplică aspirarea conținutului purulent, spălarea cu soluții antiseptice, masajul amigdalelor, aplicații cu diverse preparate pe suprafață. </p>
+                    <p>Pentru a îmbunătăți funcția de drenaj a lacunelor amigdalelor palatine, se utilizează aspirația conținutului purulent, spălarea cu soluții antiseptice, masajul amigdalelor palatine și aplicarea diferitelor  preparate pe suprafața lor. </p>
                     <p>Pentru creșterea imunității locale și generale, se utilizează medicamente cu efect imunomodulator.
 
                         Terapia conservatoare se efectuiază în cure la fiecare 6 luni. În cazul ineficienței a 2-3 cure de tratament, medicii vor lua o decizie cu privire la tratamentul chirurgical (amigdalectomie)<sup>1</sup>.<br>
