--- a/umkalor/index.html
+++ b/umkalor/index.html
@@ -77,7 +77,13 @@
 
     <div class="block-1">
         <div class="block-1_container">
-
+            <div class='block-1_center-img'></div>
+            <div class='block-1_center-container'>
+                <div class='block-1_center-image-top'></div>
+                <div class='block-1_center-image-bottom'></div>
+                <p>ПРИ ОСТРЫХ И ХРОНИЧЕСКИХ ИНФЕКЦИЯХ ДЫХАТЕЛЬНЫХ ПУТЕЙ И ЛОР-ОРГАНОВ</p>
+            </div>
+            <div class='block-1_center-image-right'></div>
         </div>
     </div>
 
@@ -85,7 +91,21 @@
 
     <div class="block-2">
         <div class="block-2_container">
-
+            <h3>Какие осложнения<br>простуды могут быть?</h3>
+            <div class='block-2_plate-container'>
+                <div class='block-2_plate'>
+                    <div class="block-2_plate-img"></div>
+                    <p>БРОНХИТ<br>ПНЕВМОНИЯ</p>
+                </div>
+                <div class='block-2_plate'>
+                    <div class="block-2_plate-img"></div>
+                    <p>ТОНЗИЛЛИТ<br>ЛАРИНГИТ<br>ТРАХЕИТ</p>
+                </div>
+                <div class='block-2_plate'>
+                    <div class="block-2_plate-img"></div>
+                    <p>СИНУСИТ<br>ГАЙМОРИТ<br>ФРОНТИТ</p>
+                </div>
+            </div>
         </div>
     </div>
 
