--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 			<a href="Tansilotren-Li/index.html">Tansilotren-Li</a>
 			<a href="SwissPharm/index.html">SwissPharm</a>
 			<a href="prospan-by/index.html">prospan-by</a>
+			<a href="Klimaktoplan-kz/index.html">Klimaktoplan-kz</a>
 			
 		</section>
 	</main>
@@ -216,6 +217,9 @@
 	}
 	a:nth-child(43)::before {
 		background: url("./prospan-by/logo.svg")no-repeat center / contain;
+	}
+	a:nth-child(44)::before {
+		background: url("./Klimaktoplan-kz/logo.svg")no-repeat center / contain;
 	}
 </style>
 
