--- a/umkalor/index.html
+++ b/umkalor/index.html
@@ -113,7 +113,25 @@
 
     <div class="block-3">
         <div class="block-3_container">
-
+            <div>
+                <h4>Моё имя Лора*<br> и я открою Вам <span>мир УМКАЛОРа</span></h4>
+                <div class="underline"></div>
+                <p>Я счастливая женщина, жена и мать. Если кто-то в семье заболел, то к кому все обращаются?</p>
+                <p>Выбираю всегда все натуральное, проверенное временем и клиническими исследованиями. Поэтому сначала детально все анализирую и тщательно изучаю.</p>
+                <p><span>Главное мое правило - не затягивай!</span> Предлагаю не доводить до осложнений и жить легко!</p>
+            </div>
+            <div class="block-3_woman"></div>
+        </div>
+        <div class="bullet-block">
+            <h3>Умкалор</h3>
+            <div class="bullet-block_container">
+                <p><span>Безопасный фитобиотик</span> и наиболее исследованный фитопрепарат при простуде для всей семьи</p>
+                <p>Своевременное применение уменьшает<span> необходимость в приеме антибиотиков¹</span></p>
+                <p><span>Ускоряет процесс выведения мокроты</span> из бронхов и слизи из носовых пазух и ходов, предотвращая развитие застойных явлений² ³</p>
+                <p>Оригинальный запатентованный экстракт пеларгонии<span> Pelargonium sidoides EPs® 7630</span>аутентичного происхождения</p>
+                <p><span>70 лет производства</span> в Германии с 1950 года</p>
+                <p><span>3 лекарственные формы.</span> Сироп, раствор, таблетки. Для детей и взрослых.</p>
+            </div>
         </div>
     </div>
 
@@ -121,7 +139,57 @@
 <a name="block-4"></a>
     <div class="block-4">
         <div class="block-4_container">
+            <div class="block-4_woman"></div>
+            <div class="block-4_text">
+                <h4><span>ЗАБОТА о близких –</span> для меня это не просто звук</h4>
+                <div class="underline"></div>
+                <p>И именно сейчас моей помощи ждут родители. Поэтому по дороге приобрела хороший теплый плед на подарок и, конечно, лекарства. Папа с мамой очень похожи, но не в выборе лекарственной формы.</p>
+                <p>Мама любит все отмерять каплями, а папа выбирает всегда, как и мой ребенок, вкусный сироп. Мне и  ужу проще выпить таблетку. </p>
+            </div>
+        </div>
+        <h3>Как принимать Умкалор? </h3>
+        <div class="btns-container">
+            <div class="btn-prep">
+                <p>КАПЛИ</p>
+            </div>
+            <div class="btn-prep">
+                <p>СИРОП</p>
+            </div>
+            <div class="btn-prep">
+                <p>ТАБЛЕТКИ</p>
+            </div>
+        </div>
+        <p class="how-to-text"><span>КАПЛИ следует принимать</span> с небольшим количеством жидкости за 30 минут до еды утром, днем ​и вечером.</p>
+        <div class="dosage">
+            <div class="product-img"></div>
+            <div class="dosage-inform">
+                <div class="dosage_container"> 
+                    <div class="dosage_container-img"></div>
+                    <div>
+                        <span>детям в возрасте от 1 до 6 лет:</span>
+                        <p>по 10 капель 3 раза в сутки;</p>
+                    </div>
+                </div>
+                <div class="dosage_container">
+                    <div class="dosage_container-img"></div>
+                    <div>
+                        <span>детям в возрасте от 1 до 6 лет:</span>
+                        <p>по 10 капель 3 раза в сутки;</p>
+                    </div>
+                </div>
+                <div class="dosage_container">
+                    <div class="dosage_container-img"></div>
+                    <div>
+                        <span>детям в возрасте от 1 до 6 лет:</span>
+                        <p>по 10 капель 3 раза в сутки;</p>
+                    </div>
+                </div>
+                <div>
+                    <p>Средняя продолжительность лечения Умкалор 7-10 дней.</p>
+                    <p>Применение препарата Умкалор у детей от 1 до 6 лет рекомендуется под наблюдением врача. </p>
+                </div>
 
+            </div>
         </div>
     </div>
 
@@ -130,15 +198,44 @@
 
     <div class="block-5">
         <div class="block-5_container">
+            <div>
+                <h4>Не советую затягивать<br> <span>с простудой</span></h4>
+                <div class="underline"></div>
+                <div class="bullet-block">
+                    <h3>Что делать, чтобы не доводить простуду
+                        до осложнений?</h3>
+                    <div class="bullet-block_container">
+                        <p>Не заниматься самолечением и при первых признаках болезни консультироваться с врачом</p>
+                        <p>Постельный режим</p>
+                        <p>Пить много жидкости (вода, чай)</p>
+                        <p>Полноценный сон</p>
+                        <p>Правильное питание</p>
+                        <p>Умкалор</p>
+                    </div>
+                </div>
+                <div class="bullet-block">
+                    <h3>Обязательно обратитесь к врачу, если при простуде: </h3>
+                    <div class="bullet-block_container">
+                        <p>Температура тела держится в пределах 38,5-39 ° C более 3 дней, а у детей младшего возраста - более 24 часов;</p>
 
+                        <p>Кашель сопровождается хрипами и одышкой;</p>
+
+                        <p>Кашель, который длится более 2 недель;</p>
+
+                        <p>Сильная головная боль, боль в глазах, околоносовых пазухах, животе, грудной клетке на вдохе;</p>
+
+                        <p>Мокроты зеленого, ржавого цвета, с примесью крови;</p>
+
+                        <p>Появился налет на миндалинах;</p>
+
+                        <p>Возникла сыпь на коже.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="block-5_woman"></div>
         </div>
+
     </div>
-
-
-
-
-
-
 
 
 
@@ -149,7 +246,19 @@
 
 
         <div class="map-text">
-            <p><b>Гастритол</b> можна знайти<br> в аптеці поблизу</p>
+            <div class="map-text_right">
+                <div class="upperline"></div>
+                <h4><span>Умкалор всегда можно найти в аптеке поблизости, а я желаю Вам здоровья. Живите легко!</span></h4>
+                <div class="underline"></div>
+            </div>
+            <div id="comp_wgt" data-drug="11719,99452,316972,316977,316978" data-lang="ru" data-url="https://compendium.com.ua/info/11093/umkalor/" data-proj="умкалор" style="border-color: #BF1985; width: 80%;"><div class="title" style="background: #BF1985;"><a href="https://compendium.com.ua/info/11093/umkalor/" title="УМКАЛОР®, DHU" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
+
+            <p><span>Доказательная база</span><br>
+                1. Timmer A. et al. Pelargonium sidoides for acute respiratory tract infections: Cochrane Database of Systematic Reviews (2008, July).<br>
+                2. Ильенко Л. И., Парфенова О. Н., Сырьева Т. Н., Гаращенко Т. И. Опыт применения препарата умкалор при заболеваниях ЛОР-органов у детей // Актуальные вопросы отоларингологии детского возраста и фармакотерапии болезней ЛОР-органов. Сб. науч. тр. — М., 2001. — С. 297–305.<br>
+                3. Agbabiaka T. B. et al. Pelargonium sidoides for acute bronchitis: A systematic review and meta-analysis (2008, May).<br>
+
+                * Аватар сайта. Все персонажи и события вымышлены, а совпадения с реальной жизнью случайны</p>
         </div>
     <div class="disclamer-tra__inner">
         <div class="logo-block">
@@ -157,7 +266,8 @@
 
 
             <p class="dt1">
-                Реклама лікарського засобу.Перед застосуванням обов'язково проконсультуватися з лікарем та ознайомитися з інструкцією для застосування. Зберігати у недоступному для дітей місці. Гастритол : Р.П. UA/8950/01/01 от 26.11.18 Постачальник: Др. Густав Кляйн ГМБ&Ко.КГ, Целль-ам-Хармерсбах, Німеччина. Ексклюзивний дистриб'ютор: ПрАТ "Натурфарм", вул. Лісова 30 - А, Пуща-Водиця, м. Київ, 04075; телефон: (044) 401-81-03
+                Реклама лікарського засобу. Перед застосуванням ознайомтеся з інструкцією і проконсультуйтесь із лікарем. Зберігати в недоступному для дітей місці. Є протипоказання і побічні реакції. Умкалор® розчин 20 і 50 мл. Умкалор® сироп 100 мл. Умкалор® таблетки у плівковій оболонці, по 20 мг № 15, № 30 в блістерах, по 15 таблеток у блістері, по 1 або 2 блістери в картонній коробці.
+                Ексклюзивний дистриб’ютор в Україні ПрАТ «Натурфарм», вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075, тел.: (044) 401–81–03, www.naturpharm.ua.
             </p>
 
             <a class="disclamer-tra__alpen disclamer-tra__klein klein-mob" href=""><p><b>Виробник</b><br>Др. Густав Кляйн<br> ГмбХ & Ко. КГ, (Німеччина)</p></a>
