--- a/Klimaktoplan-kz/index-ru.html
+++ b/Klimaktoplan-kz/index-ru.html
@@ -165,12 +165,18 @@
   </div>
   <div class="logos-container">
     <a  class="disclamer__logo" href=""></a>
-    <p class="official">Официальный представитель в России:<br>
-      ООО “Альпен Фарма”<br>
-      117513, г. Москва, ул. Островитянова, д.6<br>
-      Тел./факс: +7 (495) 609-65-72<br>
-      www.alpenpharma.com info.russia@alpenpharma.com<br>
-      ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ</p>
+    <p class="official">
+      Эксклюзивный представитель: Адрес организации, принимающей на территории Республики Казахстан претензии от потребителей по качеству продукции (товара):<br>
+ТОО «Альпен Фарма»<br>
+Республика Казахстан, Алматинская область,<br>
+Карасайский район, Ельтайский сельский округ, с.Кокузек, строение 1044<br>
+Тел./факс +7 (727) 226 53 06, 226 98 33, +7 (727) 226 53 66<br>
+E-mail: info.kazakhstan@alpenpharma.com<br>
+      ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ<br>
+Препарат зарегистрирован и разрешен к применению в Республике Казахстан лиценз. № ФД 64605036 P от 06.09.2007 г.<br>
+Номер регистрационного удостоверения: РК-ЛС-5№018903<br>
+Дата регистрации: 21.08.2017
+    </p>
     <a  class="disclamer__alpen" href="http://alpenpharma.com"></a>
   </div>
   <div class="disclamer-warning">
