--- a/Klimaktoplan-kz/index.html
+++ b/Klimaktoplan-kz/index.html
@@ -167,23 +167,18 @@
   </div>
   <div class="logos-container">
     <a  class="disclamer__logo" href=""></a>
-    <p class="official">Эксклюзивті өкіл: Қазақстан Республикасы аумағында тұтынушылардан өнім (тауар) сапасы туралы шағымдарды қабылдайтын ұйымның мекен-жайы: <br>
-      «Альпен Фарма» ЖШС <br>
-
-Қазақстан Республикасы, Алматы облысы, <br>
-
-Қарасай ауданы, Елтай ауылдық округі, Көкүзек ауылы, 1044 ғимарат <br>
-Тел. / Факс +7 (727) 226 53 06, 226 98 33, +7 (727) 226 53 66 <br>
-      E-mail: info.kazakhstan@alpenpharma.com <br>
-      ҚОЛДАНУҒА БОЛМАЙТЫН ЖАҒДАЙЛАРЫ БАР. ПАЙДАЛАНУ АЛДЫНДА НҰСҚАУЛЫҚТЫ ОҚЫҢЫЗ<br>
-      Препарат Қазақстан Республикасында тіркелген және қолдануға рұқсат етілген.<br>  Лиценз. 06.06.2007 ж. № ФД 64605036 P <br>
-      Тіркеу куәлігінің нөмірі: 
-
- РК-ЛС-5№018903 
-
- 
-
-Тіркеу күні: 21.08.2017 ж.  </p>
+    <p class="official">
+      Эксклюзивный представитель: Адрес организации, принимающей на территории Республики Казахстан претензии от потребителей по качеству продукции (товара):<br>
+ТОО «Альпен Фарма»<br>
+Республика Казахстан, Алматинская область,<br>
+Карасайский район, Ельтайский сельский округ, с.Кокузек, строение 1044<br>
+Тел./факс +7 (727) 226 53 06, 226 98 33, +7 (727) 226 53 66<br>
+E-mail: info.kazakhstan@alpenpharma.com<br>
+      ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ<br>
+Препарат зарегистрирован и разрешен к применению в Республике Казахстан лиценз. № ФД 64605036 P от 06.09.2007 г.<br>
+Номер регистрационного удостоверения: РК-ЛС-5№018903<br>
+Дата регистрации: 21.08.2017
+    </p>
     <a  class="disclamer__alpen" href="http://alpenpharma.com"></a>
   </div>
   <div class="disclamer-warning">
